# parallel-cellular-auto

./: Cargo.toml  README.md
src/: lib.rs  main.rs  par_chan.rs  seq.rs
src/par_chan/: tests.rs
