[package]
name = "eca"
version = "0.1.0"
description = "Executes elementary cellular automata"
authors = ["Matthew Fluet <matthew.fluet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"]}
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.7"
stats_alloc = "0.1"
